# proiect-factrix

./: CMakeLists.txt  README.md  main.cpp
assets/configuration files/: recipes_config.txt  texture_config.txt  ui.xml
include/: action_handler.h  belt_prototype.h  build_system.h  camera_system.h  chunk.h  chunk_loader.h  chunk_renderer.h  container_ui.h  crafter.h  drill_prototype.h  entity_data.h  event.h  event_handler.h  furnace_prototype.h  game_engine.h  game_session.h  game_session_event_handler.h  generic_event.h  god_event_handler.h  graphic_engine.h  graphic_engine_event_handler.h  graphic_engine_functions.h  graphic_functions.h  interface_layer.h  interface_ui.h  item.h  key_event.h  machine.h  machine_handler.h  mouse_event.h  perlin_noise.h  player.h  string_functions.h  structures.h  ui.h  ui_actions.h  ui_binder.h  ui_button.h  ui_constructor.h  ui_event.h  (+14 more)
saves/: last_save.txt
src/: action_handler.cpp  binder_factory.cpp  binder_factory.h  build_system.cpp  chunk.cpp  chunk.h  chunk_loader.cpp  collision_handler.cpp  collision_handler.h  crafter.cpp  entity_data.cpp  event.cpp  event_handler.cpp  game_engine.cpp  game_session.cpp  graphic_engine.cpp  graphic_engine_functions.cpp  graphic_functions.cpp  interface_layer.cpp  item.cpp  key_event.cpp  machine_handler.cpp  perlin_noise.cpp  player.cpp  ui.cpp  ui.h  ui_actions.cpp  ui_binder.cpp  ui_constructor.cpp  ui_render_functions.cpp  ui_section.cpp  ui_system.cpp  ui_window.cpp  world_generator.cpp
src/core systems/: build_system.cpp  chunk_loader.cpp  game_engine.cpp  graphic_engine.cpp
src/core systems/rendering/: camera_system.cpp  chunk_renderer.cpp  graphic_engine.cpp
src/core systems/ui/: action_handler.cpp  ui_binder.cpp  ui_constructor.cpp  ui_style.cpp  ui_system.cpp
src/core systems/world generation/: perlin_noise.cpp  world_generator.cpp
src/delegated functions/: ui_actions.cpp  ui_render_functions.cpp
src/event_handlers/: event_handler.cpp  game_session_event_handler.cpp  god_event_handler.cpp  graphic_engine_event_handler.cpp
src/events/: event.cpp  generic_event.cpp  key_event.cpp  mouse_event.cpp  ui_event.cpp
src/exceptions/: ui_exception.cpp  ui_negative_dimension_exception.cpp
src/machines/: belt_prototype.cpp  drill_prototype.cpp  furnace_prototype.cpp  machine.cpp
src/uis/: container_ui.cpp  interface_ui.cpp  ui.cpp  ui_button.cpp  ui_item_element.cpp  ui_item_sticker.cpp  ui_item_sticker_grid.cpp  ui_item_tile.cpp  ui_item_tile_grid.cpp  ui_progress_bar.cpp  ui_section.cpp  ui_window.cpp
src/utils/: graphic_functions.cpp  string_functions.cpp
